--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=na, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>ProGrad Premier League</title>
+</head>
+<body>
+    <nav>
+        <ul>
+           <li><img src="./assets/prograd-logo.png" alt=""></li> 
+            <li>
+                <ul><a href="#teams">Teams</a></ul>
+                <ul><a href="#fixtures">Fixture</a></ul>
+                <ul><a href="#gameplay">GAME PLAY</a></ul>
+                <ul><a href="#points">POINTS TABLE</a></ul>
+            </li>
+        </ul>
+    </nav>
+    <header id="teams">
+        <div>
+            <element>
+                <img src="./assets/MI.png" alt="">
+                <h4>Mumbai-Indians</h4>
+            </element>
+            <element>
+                <img src="./assets/KKR.png" alt="">
+                <h4>Kolkata-Knight-Riders</h4>
+            </element>
+            <element>
+                <img src="./assets/KXI.png" alt="">
+                <h4>Kings-XI-Punjab</h4>
+            </element>
+            <element>
+                <img src="./assets/csk.png" alt="">
+                <h4>Chennai-Super-Kings</h4>
+            </element>
+            <element>
+                <img src="./assets/RR.png" alt="">
+                <h4>Rajasthan-Royals</h4>
+            </element>
+            <element>
+                <img src="./assets/RCB.png" alt="">
+                <h4>Royal-Challengers-Bangalore</h4>
+            </element>
+            <element>
+                <img src="./assets/SRH.png" alt="">
+                <h4>Sunrisers Hyderabad</h4>
+            </element>
+        </div>
+    </header>
+    <section id="gameplay">
+        <div>
+            <div>
+                <div>
+                    <img src="./assets/RCB.png" alt="">
+                    <span></span>
+                    <div>
+                        <span>1</span>
+                        <span>2</span>
+                        <span>w</span>
+                        <span>4</span>
+                        <span>6</span>
+                        <span>3</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="./assets/RR.png" alt="">
+                    <span></span>
+                </div>
+                <div>
+                    <span>2</span>
+                    <span>4</span>
+                    <span>6</span>
+                    <span>w</span>
+                    <span>w</span>
+                    <span>4</span>
+                    <span>1</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        HAPPY ENCODING
+    </footer>
+</body>
+</html>
